--- a/src/app/views/carrito/carrito.component.html
+++ b/src/app/views/carrito/carrito.component.html
@@ -2,7 +2,7 @@
 
 <ion-header>
   <ion-toolbar class="custom-toolbar">
-    <ion-title>Notificaciones</ion-title>
+    <ion-title>Mis Compras</ion-title>
   </ion-toolbar>
 </ion-header>
 
