--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -67,7 +67,7 @@
   <div class="banners-container" *ngIf="isLoggedIn">
     <div class="banner">
       <img
-        src="../../assets/icon/7ce58230-3561-424f-a726-682e7f0bee4b.jpeg"
+        src="../../assets/icon/nuevo1.jfif"
         alt="Banner 2"
         class="banner-image"
       />
@@ -81,7 +81,7 @@
   <div class="banners-container" *ngIf="!isLoggedIn">
     <div class="banner">
       <img
-        src="../../assets/icon/7ce58230-3561-424f-a726-682e7f0bee4b.jpeg"
+        src="../../assets/icon/nuevo1.jfif"
         alt="Banner 2"
         class="banner-image"
       />
