--- a/src/app/views/carrito-compras/carrito-compras.component.scss
+++ b/src/app/views/carrito-compras/carrito-compras.component.scss
@@ -11,10 +11,10 @@
 
 
 
-// .notifications-container {
-//   padding: 1rem;
-//   background-color: #f5f5f5;
-// }
+.notifications-container {
+  padding: 1rem;
+  background-color: #f5f5f5;
+}
 
 // .notification-card {
 //   background: #fff;
