--- a/src/app/views/detalle/detalle.component.scss
+++ b/src/app/views/detalle/detalle.component.scss
@@ -271,6 +271,7 @@ ion-chip {
   justify-content: space-between;
   gap: 5px;
   margin-bottom: 20px;
+  padding:5px
 }
 
 /* Estilo general de los botones */
