--- a/src/app/views/notificaciones/notificaciones.component.html
+++ b/src/app/views/notificaciones/notificaciones.component.html
@@ -33,6 +33,8 @@
     </ion-card>
   </div>
 
+</ion-content>
+
   <ion-footer>
     <ion-toolbar class="scrollable-toolbar">
       <!-- Indicador de deslizamiento -->
