cambios- arrehlos firebase

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,8 +7,7 @@
       </div>
       <ion-icon name="cart-outline" class="icon-cart"></ion-icon>
     </div>
-  <p class="address-text">Acá iría la dirección</p>
-  <p class="address-text" (click)="navigateTo('login')" *ngIf="!isLoggedIn">Login de prueba</p>
+  <!-- <p class="address-text" (click)="navigateTo('login')" *ngIf="!isLoggedIn">Login de prueba</p> -->
   </ion-toolbar>
 </ion-header>
 
@@ -19,7 +18,7 @@
     <ion-slide>
       <div class="slide-content">
         <img
-          src="../../assets/icon/3.png"
+          src="../../assets/icon/imagenmodif.jfif"
           alt="Audífonos 1"
           class="slide-image"
         />
@@ -291,6 +290,8 @@
       <img src="../../assets/icon/4.png" alt="Banner 2" class="banner-image" />
     </div>
   </div>
+
+
 
   <!-- ----Seccion nueva---- -->
   <div class="categories-section" *ngIf="isLoggedIn">
