--- a/src/app/views/opinion-producto/opinion-producto.component.html
+++ b/src/app/views/opinion-producto/opinion-producto.component.html
@@ -11,7 +11,7 @@
   <ion-card class="opinion-card">
     <ion-item lines="none">
       <ion-thumbnail slot="start">
-        <img src="assets/product-placeholder.png" alt="Imagen del producto">
+        <img src="../../../assets/icon/rueda-removebg-preview.png" alt="Imagen del producto">
       </ion-thumbnail>
       <ion-label>
         <h2 class="product-name">Cubierta Fate Sentiva 195 65 15</h2>
