--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -46,7 +46,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 padding: 4px 8px; /* Reducido verticalmente para hacerla más fina */
-height: 70px; /* Ajuste de altura total del toolbar */
+height: 70px;
 }
 
 /* Contenedor de búsqueda y carrito */
@@ -56,7 +56,7 @@ align-items: center;
 width: 100%; /* Ocupa todo el ancho */
 max-width: 600px; /* Ancho máximo del contenedor */
 gap: 8px; /* Espaciado entre búsqueda y carrito */
-margin-top: 51px;
+// margin-top: 51px;
 }
 
 /* Barra de búsqueda más fina */
