--- a/src/app/views/notificaciones/notificaciones.component.scss
+++ b/src/app/views/notificaciones/notificaciones.component.scss
@@ -149,3 +149,9 @@
   background-color: #6a1b9a; /* Color del "thumb" */
   border-radius: 10px;
 }
+
+
+ion-footer {
+ 
+  position: relative; /* Esto ayuda a que se quede en la parte inferior */
+}
