--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -66,7 +66,7 @@
   <div class="banners-container" *ngIf="isLoggedIn">
     <div class="banner">
       <img
-        src="../../assets/icon/nuevo1.jfif"
+        src="../../assets/icon/nuevobien.jfif"
         alt="Banner 2"
         class="banner-image"
       />
@@ -80,7 +80,7 @@
   <div class="banners-container" *ngIf="!isLoggedIn">
     <div class="banner">
       <img
-        src="../../assets/icon/nuevo1.jfif"
+        src="../../assets/icon/nuevobien.jfif"
         alt="Banner 2"
         class="banner-image"
       />
