--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
       </div>
       <ion-icon name="cart-outline" class="icon-cart"></ion-icon>
     </div>
-  <!-- <p class="address-text" (click)="navigateTo('login')" *ngIf="!isLoggedIn">Login de prueba</p> -->
+  <p class="address-text" (click)="navigateTo('login')" *ngIf="!isLoggedIn">Login de prueba</p>
   </ion-toolbar>
 </ion-header>
 
