--- a/src/app/views/oferta/oferta.component.scss
+++ b/src/app/views/oferta/oferta.component.scss
@@ -1,140 +1,14 @@
-.content {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  height: 100%;
-  background-color: #f5f5f5;
-  padding: 16px;
-}
-
-.main-card {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  border-radius: 8px;
-  box-shadow: none; /* Remover el borde */
-  padding: 20px;
-}
-
-.product-container {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-}
-
-.product-image-container {
-  flex: 40%; /* Ajusta el ancho según sea necesario */
-}
-
-.product-details-container {
-  flex: 60%; /* Ajusta el ancho según sea necesario */
-  display: flex;
-  flex-direction: column;
-}
-
-.product-image {
-  width: 70%;
-  height: auto;
-  max-height: 300px;
-  object-fit: scale-down;
-  margin-bottom: 16px;
-}
-
-.product-details {
-  margin-bottom: 16px;
-}
-
-.product-original-price {
-  font-size: 1em;
-  color: black;
-  text-decoration: line-through;
-  margin-bottom: -2px; /* Reduce el margen inferior para estar más pegado al precio final */
-  margin-top: 8px; /* Margen superior para separarlo del contenido superior */
-}
-
-.product-price {
-  font-size: 2.3em;
-  color: black;
-  margin-top: 0; /* Elimina el margen superior para estar más pegado al precio tachado */
-  margin-bottom: 16px; /* Elimina el margen inferior para estar más pegado al contenido inferior */
-  display: flex;
-  align-items: center;
-}
-
-.discount-info {
-  font-size: 0.4em; /* Tamaño menor para el porcentaje de descuento */
-  color: rgb(14, 189, 14);
-  margin-left: 8px; /* Espacio entre el precio y el porcentaje de descuento */
-}
-
-.product-info-list {
-  list-style-type: none;
-  padding: 0;
-}
-
-.product-info-list li {
-  display: flex;
-  align-items: center;
-  margin-bottom: 12px;
-  font-size: 1.1em;
-  color: black;
-}
-
-.product-info-list ion-icon {
-  margin-right: 12px;
-  font-size: 1.2em;
-  color: black; /* Color del ícono */
-}
-
-.product-info-list strong {
-  margin-left: 8px; /* Añade un margen a la izquierda del valor */
-}
-
-.product-payment {
-  flex: 1;
-}
-
-.product-title {
-  font-size: 1.5em;
-  margin: 16px 0;
-  color: black;
-}
-
-.product-description {
-  font-size: 1em;
-  color: #666;
-  margin-bottom: 16px;
-}
-
-ion-button {
-  margin-top: 16px;
-  width: 100%;
-}
-
-.no-product-card {
-  width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
-  border-radius: 8px;
-}
-
 :host {
-  background-color: #ebebeb;
+
+      --ion-background-color:#ebebeb;
 }
 
-ion-content {
-  --background: #ebebeb;
-}
+  .custom-toolbar {
+    --background: #6a1b9a;
+    color: #fff;
+  }
 
-.product-segment {
-  margin-top: 20px;
-  margin-bottom: 16px;
-  width: 100%;
-}
 
-ion-segment-button {
-  --indicator-color: #1025df;
-}
 
 
 
@@ -236,4 +110,64 @@ ion-segment-button {
 .scrollable-tabs::-webkit-scrollbar-thumb {
   background-color: #6a1b9a; /* Color del "thumb" */
   border-radius: 10px;
+}
+
+
+.title-label {
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 16px;
+  color: black;
+}
+
+.button-container {
+  padding: 16px;
+}
+
+ion-item {
+  --inner-padding-end: 8px;
+}
+
+ion-label {
+  font-size: 1rem;
+}
+
+ion-button {
+  --border-radius: 8px;
+  --background: var(--ion-color-secondary);
+}
+.custom-item {
+  border: 1px solid #4a008e; /* Color violeta medio */
+  border-radius: 8px;
+  margin: 8px;
+  --inner-padding-end: 8px;
+}
+
+.custom-item ion-label {
+  font-size: 1rem;
+}
+
+.custom-button {
+  --border-radius: 8px;
+  --background: #4a008e; /* Fondo violeta */
+  --color: white;
+  --border-color: #4a008e;;
+}
+
+.custom-button:hover {
+  filter: brightness(0.9);
+}
+
+.publish-button {
+  --background: #4a008e;; /* Fondo violeta */
+  --color: white;
+  --border-radius: 8px;
+}
+
+.publish-button:hover {
+  filter: brightness(0.9);
+}
+
+.button-container {
+  padding: 16px;
 }
