--- a/src/app/views/detalle/detalle.component.html
+++ b/src/app/views/detalle/detalle.component.html
@@ -33,13 +33,17 @@
 
         <!-- Botón de Favorito (arriba a la derecha) -->
         <div class="favorite-icon">
-          <i class="fa fa-heart"></i>
+          <!-- <i class="fa fa-heart"></i> -->
+              <ion-icon name="heart" slot="icon-only"></ion-icon>
+
           <!-- Ícono de corazón -->
         </div>
 
         <!-- Botón de Compartir (abajo a la derecha) -->
         <div class="share-icon">
-          <i class="fa fa-share-alt"></i>
+          <!-- <i class="fa fa-share-alt"></i> -->
+              <ion-icon name="share-social" slot="icon-only"></ion-icon>
+
           <!-- Ícono de compartir -->
         </div>
       </div>
@@ -322,3 +326,4 @@
     </div>
   </ion-toolbar>
 </ion-footer>
+
