--- a/src/app/views/notificaciones/notificaciones.component.scss
+++ b/src/app/views/notificaciones/notificaciones.component.scss
@@ -114,12 +114,12 @@
   ion-icon {
     font-size: 24px;
     margin-bottom: 4px;
-    color: #6a1b9a; /* Iconos violeta */
+    color: rgb(49, 47, 47);; /* Iconos violeta */
     transition: color 0.3s ease;
   }
 
   ion-label {
-    color: #6a1b9a;
+    color: #09010e;
     white-space: nowrap;
   }
 
@@ -152,6 +152,6 @@
 
 
 ion-footer {
- 
+
   position: relative; /* Esto ayuda a que se quede en la parte inferior */
 }
