--- a/src/app/views/opinion-producto/opinion-producto.component.scss
+++ b/src/app/views/opinion-producto/opinion-producto.component.scss
@@ -140,12 +140,12 @@ ion-toolbar {
   ion-icon {
     font-size: 24px;
     margin-bottom: 4px;
-    color: #6a1b9a; /* Iconos violeta */
+    color: rgb(49, 47, 47);; /* Iconos violeta */
     transition: color 0.3s ease;
   }
 
   ion-label {
-    color: #6a1b9a;
+    color: #0b0111;
     white-space: nowrap;
   }
 
