--- a/src/app/views/tienda/tienda.component.scss
+++ b/src/app/views/tienda/tienda.component.scss
@@ -528,6 +528,13 @@ margin-top:-17px;
     font-size: 12px; /* Tamaño más pequeño */
     text-transform: none; /* Evitar texto en mayúsculas */
     --ripple-color: #6200ea; /* Efecto ripple púrpura */
+
+
+font-size: 12px;
+    color: #fff;
+    margin-top: 4px;
+    text-align: center;
+
   }
 }
 
@@ -652,12 +659,12 @@ margin-top:-17px;
   ion-icon {
     font-size: 24px;
     margin-bottom: 4px;
-    color: #6a1b9a; /* Iconos violeta */
+    color: rgb(49, 47, 47);; /* Iconos violeta */
     transition: color 0.3s ease;
   }
 
   ion-label {
-    color: #6a1b9a;
+    color: #040007;
     white-space: nowrap;
   }
 
