--- a/src/app/views/mi-cuenta/mi-cuenta.component.html
+++ b/src/app/views/mi-cuenta/mi-cuenta.component.html
@@ -1,3 +1,141 @@
-<p>
-  mi-cuenta works!
-</p>
+<ion-header>
+  <ion-toolbar class="profile-header">
+    <ion-title>Mi Cuenta</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+
+<ion-content class="ion-padding">
+  <ion-button class="buy-button">
+    <ion-label>Vender</ion-label>
+  </ion-button>
+  <ion-item button>
+    <ion-icon name="home-outline" slot="start"></ion-icon>
+    <ion-label>Mis Subscripciones</ion-label>
+  </ion-item>
+  <ion-list lines="none" class="options-list">
+    <h1>Compras</h1>
+    <ion-item button>
+      <ion-icon name="home-outline" slot="start"></ion-icon>
+      <ion-label>Preguntas</ion-label>
+    </ion-item>
+    <ion-item button>
+      <ion-icon name="storefront-outline" slot="start"></ion-icon>
+      <ion-label>Mis Compras</ion-label>
+    </ion-item>
+    <ion-item button>
+      <ion-icon name="notifications-outline" slot="start"></ion-icon>
+      <ion-label>Mas Opciones</ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-list lines="none" class="options-list">
+    <h1>Ventas</h1>
+    <ion-item button>
+      <ion-icon name="home-outline" slot="start"></ion-icon>
+      <ion-label>Resumen</ion-label>
+    </ion-item>
+    <ion-item button>
+      <ion-icon name="storefront-outline" slot="start"></ion-icon>
+      <ion-label>Publicaciones</ion-label>
+    </ion-item>
+    <ion-item button>
+      <ion-icon name="notifications-outline" slot="start"></ion-icon>
+      <ion-label>Preguntas</ion-label>
+    </ion-item>
+    <ion-item button>
+      <ion-icon name="bag-outline" slot="start"></ion-icon>
+      <ion-label>Reputación</ion-label>
+    </ion-item>
+    <ion-item button>
+      <ion-icon name="heart-outline" slot="start"></ion-icon>
+      <ion-label>Ventas</ion-label>
+    </ion-item>
+    <ion-item button>
+      <ion-icon name="pricetag-outline" slot="start"></ion-icon>
+      <ion-label>Métricas</ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-list lines="none" class="options-list">
+    <h1>Facturación</h1>
+    <ion-item button>
+      <ion-icon name="home-outline" slot="start"></ion-icon>
+      <ion-label>Facturación</ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-list lines="none" class="options-list">
+    <h1>Configuración</h1>
+    <ion-item button>
+      <ion-icon name="home-outline" slot="start"></ion-icon>
+      <ion-label>Mi Perfil</ion-label>
+    </ion-item>
+    <ion-item button>
+      <ion-icon name="storefront-outline" slot="start"></ion-icon>
+      <ion-label>Ajustes</ion-label>
+    </ion-item>
+    <ion-item button>
+      <ion-icon name="notifications-outline" slot="start"></ion-icon>
+      <ion-label>Cerrar Sesión</ion-label>
+    </ion-item>
+  </ion-list>
+
+
+
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar class="scrollable-toolbar">
+    <!-- Indicador de deslizamiento -->
+    <div class="scroll-hint">
+      <ion-icon name="arrow-forward-outline"></ion-icon>
+      <span>Desliza para más opciones</span>
+    </div>
+
+    <!-- Tabs -->
+    <div class="scrollable-tabs">
+      <!-- Tab: Inicio -->
+      <div class="tab-item">
+        <ion-icon name="home-outline" (click)="navigateTo('home')"></ion-icon>
+        <ion-label>Inicio</ion-label>
+      </div>
+
+      <!-- Tab: Tienda -->
+      <div class="tab-item">
+        <ion-icon name="storefront-outline" (click)="navigateTo('tienda')"></ion-icon>
+        <ion-label>Tienda</ion-label>
+      </div>
+
+      <!-- Tab: Notificaciones -->
+      <div class="tab-item">
+        <ion-icon name="notifications-outline" (click)="navigateTo('notificaciones')"></ion-icon>
+        <ion-label>Notificaciones</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Perfil -->
+      <div class="tab-item">
+        <ion-icon name="person-outline" (click)="navigateTo('perfil')"></ion-icon>
+        <ion-label>Perfil</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Favoritos -->
+      <div class="tab-item">
+        <ion-icon name="heart-outline" (click)="navigateTo('favoritos')"></ion-icon>
+        <ion-label>Favoritos</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Configuración -->
+      <div class="tab-item">
+        <ion-icon name="settings-outline" (click)="navigateTo('perfil')"></ion-icon>
+        <ion-label>Configuración</ion-label>
+      </div>
+
+      <!-- Nueva Tab: Ayuda -->
+      <div class="tab-item">
+        <ion-icon name="help-circle-outline" (click)="navigateTo('ayuda')"></ion-icon>
+        <ion-label>Ayuda</ion-label>
+      </div>
+    </div>
+  </ion-toolbar>
+</ion-footer>
