--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -674,6 +674,7 @@ margin-top:-17px;
 
 
 
+// footer
 
 /* Toolbar scrollable */
 .scrollable-toolbar {
@@ -731,7 +732,7 @@ margin-top:-17px;
   align-items: center;
   justify-content: center;
   min-width: 80px; /* Ancho mínimo de cada tab */
-  color: #6a1b9a; /* Color violeta para los íconos y texto */
+  color: #6a1b9a;
   font-size: 12px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -739,12 +740,12 @@ margin-top:-17px;
   ion-icon {
     font-size: 24px;
     margin-bottom: 4px;
-    color: #6a1b9a; /* Iconos violeta */
+    color: rgb(49, 47, 47);
     transition: color 0.3s ease;
   }
 
   ion-label {
-    color: #6a1b9a;
+    color: #0a010f;
     white-space: nowrap;
   }
 
@@ -771,6 +772,6 @@ margin-top:-17px;
 }
 
 .scrollable-tabs::-webkit-scrollbar-thumb {
-  background-color: #6a1b9a; /* Color del "thumb" */
+  background-color: #6a1b9a;
   border-radius: 10px;
 }
