--- a/src/app/views/carrito/carrito.component.scss
+++ b/src/app/views/carrito/carrito.component.scss
@@ -83,6 +83,7 @@
   margin: 0;
 }
 
+// footer
 
 /* Toolbar scrollable */
 .scrollable-toolbar {
@@ -140,7 +141,7 @@
   align-items: center;
   justify-content: center;
   min-width: 80px; /* Ancho mínimo de cada tab */
-  color: #6a1b9a; /* Color violeta para los íconos y texto */
+  color: #6a1b9a;
   font-size: 12px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -180,6 +181,6 @@
 }
 
 .scrollable-tabs::-webkit-scrollbar-thumb {
-  background-color: #6a1b9a; /* Color del "thumb" */
+  background-color: #6a1b9a;
   border-radius: 10px;
 }
