--- a/src/app/views/mi-cuenta/mi-cuenta.component.html
+++ b/src/app/views/mi-cuenta/mi-cuenta.component.html
@@ -4,85 +4,83 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-content class="ion-padding profile-content">
 
-<ion-content class="ion-padding">
-  <ion-button class="buy-button">
-    <ion-label>Vender</ion-label>
-  </ion-button>
   <ion-item button>
-    <ion-icon name="home-outline" slot="start"></ion-icon>
+    <ion-icon name="help-circle-outline" slot="start"></ion-icon>
     <ion-label>Mis Subscripciones</ion-label>
   </ion-item>
+  <ion-button expand="block" class="buy-button">
+    <ion-label>Vender</ion-label>
+  </ion-button>
+
   <ion-list lines="none" class="options-list">
-    <h1>Compras</h1>
+    <h1 class="section-title">Compras</h1>
     <ion-item button>
-      <ion-icon name="home-outline" slot="start"></ion-icon>
+      <ion-icon name="help-circle-outline" slot="start"></ion-icon>
       <ion-label>Preguntas</ion-label>
     </ion-item>
     <ion-item button>
-      <ion-icon name="storefront-outline" slot="start"></ion-icon>
+      <ion-icon name="bag-handle-outline" slot="start"></ion-icon>
       <ion-label>Mis Compras</ion-label>
     </ion-item>
     <ion-item button>
-      <ion-icon name="notifications-outline" slot="start"></ion-icon>
-      <ion-label>Mas Opciones</ion-label>
+      <ion-icon name="ellipsis-horizontal-outline" slot="start"></ion-icon>
+      <ion-label>Mis Opiniones</ion-label>
     </ion-item>
   </ion-list>
 
   <ion-list lines="none" class="options-list">
-    <h1>Ventas</h1>
+    <h1 class="section-title">Ventas</h1>
     <ion-item button>
-      <ion-icon name="home-outline" slot="start"></ion-icon>
+      <ion-icon name="bar-chart-outline" slot="start"></ion-icon>
       <ion-label>Resumen</ion-label>
     </ion-item>
     <ion-item button>
-      <ion-icon name="storefront-outline" slot="start"></ion-icon>
+      <ion-icon name="pricetags-outline" slot="start"></ion-icon>
       <ion-label>Publicaciones</ion-label>
     </ion-item>
     <ion-item button>
-      <ion-icon name="notifications-outline" slot="start"></ion-icon>
+      <ion-icon name="chatbubbles-outline" slot="start"></ion-icon>
       <ion-label>Preguntas</ion-label>
     </ion-item>
     <ion-item button>
-      <ion-icon name="bag-outline" slot="start"></ion-icon>
+      <ion-icon name="star-outline" slot="start"></ion-icon>
       <ion-label>Reputación</ion-label>
     </ion-item>
     <ion-item button>
-      <ion-icon name="heart-outline" slot="start"></ion-icon>
+      <ion-icon name="cash-outline" slot="start"></ion-icon>
       <ion-label>Ventas</ion-label>
     </ion-item>
     <ion-item button>
-      <ion-icon name="pricetag-outline" slot="start"></ion-icon>
+      <ion-icon name="analytics-outline" slot="start"></ion-icon>
       <ion-label>Métricas</ion-label>
     </ion-item>
   </ion-list>
 
   <ion-list lines="none" class="options-list">
-    <h1>Facturación</h1>
+    <h1 class="section-title">Facturación</h1>
     <ion-item button>
-      <ion-icon name="home-outline" slot="start"></ion-icon>
+      <ion-icon name="receipt-outline" slot="start"></ion-icon>
       <ion-label>Facturación</ion-label>
     </ion-item>
   </ion-list>
 
   <ion-list lines="none" class="options-list">
-    <h1>Configuración</h1>
+    <h1 class="section-title">Configuración</h1>
     <ion-item button>
-      <ion-icon name="home-outline" slot="start"></ion-icon>
+      <ion-icon name="person-outline" slot="start"></ion-icon>
       <ion-label>Mi Perfil</ion-label>
     </ion-item>
     <ion-item button>
-      <ion-icon name="storefront-outline" slot="start"></ion-icon>
+      <ion-icon name="settings-outline" slot="start"></ion-icon>
       <ion-label>Ajustes</ion-label>
     </ion-item>
     <ion-item button>
-      <ion-icon name="notifications-outline" slot="start"></ion-icon>
+      <ion-icon name="log-out-outline" slot="start"></ion-icon>
       <ion-label>Cerrar Sesión</ion-label>
     </ion-item>
   </ion-list>
-
-
-
 </ion-content>
 
 <ion-footer>
@@ -139,3 +137,4 @@
     </div>
   </ion-toolbar>
 </ion-footer>
+
