--- a/src/app/views/mi-perfil/mi-perfil.component.scss
+++ b/src/app/views/mi-perfil/mi-perfil.component.scss
@@ -105,6 +105,8 @@ ion-icon {
 
 // footer
 
+// footer
+
 /* Toolbar scrollable */
 .scrollable-toolbar {
   --background: #fff; /* Fondo blanco */
@@ -161,7 +163,7 @@ ion-icon {
   align-items: center;
   justify-content: center;
   min-width: 80px; /* Ancho mínimo de cada tab */
-  color: #6a1b9a; /* Color violeta para los íconos y texto */
+  color: #6a1b9a;
   font-size: 12px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -169,12 +171,12 @@ ion-icon {
   ion-icon {
     font-size: 24px;
     margin-bottom: 4px;
-    color: #6a1b9a; /* Iconos violeta */
+    color: rgb(49, 47, 47);
     transition: color 0.3s ease;
   }
 
   ion-label {
-    color: #6a1b9a;
+    color: #0a010f;
     white-space: nowrap;
   }
 
@@ -201,7 +203,6 @@ ion-icon {
 }
 
 .scrollable-tabs::-webkit-scrollbar-thumb {
-  background-color: #6a1b9a; /* Color del "thumb" */
+  background-color: #6a1b9a;
   border-radius: 10px;
 }
-
